auto(review): checkpoint in-progress review across all features (budget, task, meal, app, res)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>